# wr-tactics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  lint-python.js  package-lock.json  package.json  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: sonarcloud.yml
.husky/: commit-msg  install.mjs
api/: .env.example  pyproject.toml  requirements-dev.txt  requirements-scraper.txt  requirements.txt  sonar-project.properties
api/src/: main.py
api/tests/: test_main.py
ui/: .prettierignore  eslint.config.js  package-lock.json  package.json  sonar-project.properties  tsconfig.app.json  vite.config.ts  vitest.config.ts
ui/src/: App.test.tsx  App.tsx
